<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_register">Inscription</string>
    <string name="label_first_name">Prénom</string>
    <string name="hint_first_name">Entrez votre prénom</string>
    <string name="label_last_name">Nom</string>
    <string name="hint_last_name">Entrez votre nom</string>
    <string name="label_email">Email</string>
    <string name="hint_email">Entrez votre email</string>
    <string name="label_phone_number">Numéro de téléphone</string>
    <string name="hint_phone_number">Entrez votre numéro de téléphone</string>
    <string name="label_password">Mot de passe</string>
    <string name="hint_password">Entrez votre mot de passe</string>
    <string name="label_availability">Disponibilités</string>
    <string name="label_day_of_week">Jour de la semaine</string>
    <string name="label_start_time">Début</string>
    <string name="label_end_time">Fin</string>
    <string name="label_monday">Lundi</string>
    <string name="label_tuesday">Mardi</string>
    <string name="label_wednesday">Mercredi</string>
    <string name="label_thursday">Jeudi</string>
    <string name="label_friday">Vendredi</string>
    <string name="label_saturday">Samedi</string>
    <string name="label_sunday">Dimanche</string>
    <string name="button_register">Inscrire</string>
    <string name="app_name">NoMoreWaste</string>
    <string name="volunteer_name">Name: %1$s %2$s</string>
    <string name="volunteer_email">Email: %1$s</string>
    <string name="volunteer_phone">Phone: %1$s</string>
    <string name="title_login">Login</string>
    <string name="edit_first_name">Prénom</string>
    <string name="edit_last_name">Nom</string>
    <string name="button_save_name">Enregistrer les modifications</string>
    <string name="button_manage_products">Gérer les produits</string>
    <string name="button_delete_product">Supprimer le produit</string>
    <string name="recipe_name_placeholder">Recette: %1$s</string>
    <string name="recipe_instructions_placeholder">Instructions: %1$s</string>
    <string name="missing_ingredients_placeholder">Ingrédients manquants: %1$s</string>
    <string name="all_ingredients_available">Tous les ingrédients sont disponibles</string>
    <string name="suggest_menu">Suggérer un menu</string>
    <string name="favorite_button_description">Marquer comme favori</string>
    <string-array name="filter_options">
        <item>All</item>
        <item>Vegetarian</item>
        <item>Gluten Free</item>
        <item>Favorites</item>
    </string-array>

    <string name="product_info">Produit: %1$s - Quantité: %2$.2f g</string>
    <string name="unknown_product">Produit inconnu</string>
    <string name="error_fetching_products">Erreur lors de la récupération des produits</string>
    <string name="connection_failure">Échec de la connexion : %1$s</string>
    <string name="no_recipes_found">Aucune recette trouvée</string>
    <string name="suggestion_error">Erreur lors de la suggestion des recettes</string>
    <string name="select_product_warning">Veuillez sélectionner au moins un produit</string>

    <string name="product_name_hint">Nom du produit</string>
    <string name="product_barcode_hint">Code-barres du produit</string>
    <string name="product_quantity_hint">Quantité</string>
    <string name="product_expiration_date_hint">Date d expiration (YYYY-MM-DD)</string>
    <string name="product_volume_hint">Volume</string>
    <string name="add_product">Ajouter le produit</string>
    <string name="update_product">Mettre à jour le produit</string>
    <string name="delete_product">Supprimer le produit</string>
    <string name="search_hint">Search</string>
    <string name="edit_product">Edit Product</string>
    <string name="save_product">Save Product</string>
</resources>