<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/TitleTextStyle"
            android:text="@string/title_register" />

        <TextView
            style="@style/LabelTextStyle"
            android:text="@string/label_first_name" />

        <EditText
            android:id="@+id/first_name"
            style="@style/EditTextStyle"
            android:hint="@string/hint_first_name"
            android:autofillHints="givenName" />

        <TextView
            style="@style/LabelTextStyle"
            android:text="@string/label_last_name" />

        <EditText
            android:id="@+id/last_name"
            style="@style/EditTextStyle"
            android:hint="@string/hint_last_name"
            android:autofillHints="familyName" />

        <TextView
            style="@style/LabelTextStyle"
            android:text="@string/label_email" />

        <EditText
            android:id="@+id/email"
            style="@style/EditTextStyle"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:autofillHints="emailAddress" />

        <TextView
            style="@style/LabelTextStyle"
            android:text="@string/label_phone_number" />

        <EditText
            android:id="@+id/phone_number"
            style="@style/EditTextStyle"
            android:inputType="phone"
            android:hint="@string/hint_phone_number"
            android:autofillHints="phoneNumber" />

        <TextView
            style="@style/LabelTextStyle"
            android:text="@string/label_password" />

        <EditText
            android:id="@+id/password"
            style="@style/EditTextStyle"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:autofillHints="password" />

        <TextView
            style="@style/LabelTextStyle"
            android:text="@string/label_availability" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <TableRow style="@style/TableRowStyle">
                <TextView android:text="@string/label_day_of_week" />
                <TextView android:text="@string/label_start_time" />
                <TextView android:text="@string/label_end_time" />
            </TableRow>

            <!-- Lundi -->
            <TableRow style="@style/TableRowStyle">
                <CheckBox android:id="@+id/monday_check" />
                <TextView android:text="@string/label_monday" />
                <EditText android:id="@+id/monday_start" android:inputType="time" android:hint="@string/label_start_time" android:autofillHints="time" />
                <EditText android:id="@+id/monday_end" android:inputType="time" android:hint="@string/label_end_time" android:autofillHints="time" />
            </TableRow>

            <!-- Mardi -->
            <TableRow style="@style/TableRowStyle">
                <CheckBox android:id="@+id/tuesday_check" />
                <TextView android:text="@string/label_tuesday" />
                <EditText android:id="@+id/tuesday_start" android:inputType="time" android:hint="@string/label_start_time" android:autofillHints="time" />
                <EditText android:id="@+id/tuesday_end" android:inputType="time" android:hint="@string/label_end_time" android:autofillHints="time" />
            </TableRow>

            <!-- Mercredi -->
            <TableRow style="@style/TableRowStyle">
                <CheckBox android:id="@+id/wednesday_check" />
                <TextView android:text="@string/label_wednesday" />
                <EditText android:id="@+id/wednesday_start" android:inputType="time" android:hint="@string/label_start_time" android:autofillHints="time" />
                <EditText android:id="@+id/wednesday_end" android:inputType="time" android:hint="@string/label_end_time" android:autofillHints="time" />
            </TableRow>

            <!-- Jeudi -->
            <TableRow style="@style/TableRowStyle">
                <CheckBox android:id="@+id/thursday_check" />
                <TextView android:text="@string/label_thursday" />
                <EditText android:id="@+id/thursday_start" android:inputType="time" android:hint="@string/label_start_time" android:autofillHints="time" />
                <EditText android:id="@+id/thursday_end" android:inputType="time" android:hint="@string/label_end_time" android:autofillHints="time" />
            </TableRow>

            <!-- Vendredi -->
            <TableRow style="@style/TableRowStyle">
                <CheckBox android:id="@+id/friday_check" />
                <TextView android:text="@string/label_friday" />
                <EditText android:id="@+id/friday_start" android:inputType="time" android:hint="@string/label_start_time" android:autofillHints="time" />
                <EditText android:id="@+id/friday_end" android:inputType="time" android:hint="@string/label_end_time" android:autofillHints="time" />
            </TableRow>

            <!-- Samedi -->
            <TableRow style="@style/TableRowStyle">
                <CheckBox android:id="@+id/saturday_check" />
                <TextView android:text="@string/label_saturday" />
                <EditText android:id="@+id/saturday_start" android:inputType="time" android:hint="@string/label_start_time" android:autofillHints="time" />
                <EditText android:id="@+id/saturday_end" android:inputType="time" android:hint="@string/label_end_time" android:autofillHints="time" />
            </TableRow>

            <!-- Dimanche -->
            <TableRow style="@style/TableRowStyle">
                <CheckBox android:id="@+id/sunday_check" />
                <TextView android:text="@string/label_sunday" />
                <EditText android:id="@+id/sunday_start" android:inputType="time" android:hint="@string/label_start_time" android:autofillHints="time" />
                <EditText android:id="@+id/sunday_end" android:inputType="time" android:hint="@string/label_end_time" android:autofillHints="time" />
            </TableRow>

        </TableLayout>

        <Button
            style="@style/ButtonStyle"
            android:text="@string/button_register" />

    </LinearLayout>
</ScrollView>
