<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name_hint"
        android:inputType="text"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/editTextProductBarcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_barcode_hint"
        android:inputType="number"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/editTextVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_volume_hint"
        android:inputType="number"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/editTextExpirationDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_expiration_date_hint"
        android:inputType="date"
        android:minHeight="48dp"/>

    <Spinner
        android:id="@+id/spinnerWarehouse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:minHeight="48dp"/>

    <Button
        android:id="@+id/buttonSaveProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_product"
        android:minHeight="48dp"/>

</LinearLayout>
